Grammar/function_header.gram
start: f=function END { FunctionNode(*f,None,None) }

function: a=return_type b=function_name "(" c=param? ")" {
    (
        a,
        b,
        [c[0]] + ([item[1] for item in c[1]] if len(c) > 1 else [])
    )
}

return_type: NAME { NameNode(name.string) }
function_name: NAME { NameNode(name.string) }
param: typed_param ("," typed_param)*
typed_param: t=NAME n=NAME { ParamNode(t.string, n.string) }
